...
    android:id="@+id/constraintLayout"
    android:background="?android:windowBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtGivenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="First Name:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPhoto" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Email:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSurname" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Edit Password"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintStart_toStartOf="@+id/btnLogout" />

    <Button
        android:id="@+id/btnChangePicture"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Change Photo"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteProfile"
        app:layout_constraintEnd_toEndOf="@+id/btnDeleteProfile" />
...
