...
        android:layout_marginBottom="332dp"
        android:text="Register as Student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startLoginbtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Trojan Check In/Out"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/startLoginbtn"
        app:layout_constraintEnd_toEndOf="parent"
...
